tpl/e46b5789ce744577a2f91b2f06d50fd6/etc/iptables/iptables.tor.rules
*nat
:PREROUTING ACCEPT [6:2126]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [17:6239]
:POSTROUTING ACCEPT [6:408]

-A PREROUTING ! -i lo -p udp -m udp --dport 53 -j REDIRECT --to-ports 9053
-A PREROUTING ! -i lo -p tcp -m tcp -j REDIRECT --to-ports 9040

-A OUTPUT -o lo -j RETURN
-A OUTPUT -d 192.168.0.0/24 -j RETURN

-A OUTPUT -m owner --uid-owner "tor" -j RETURN

-A OUTPUT -p udp -m udp --dport 53 -j REDIRECT --to-ports 9053
-A OUTPUT -p tcp -m tcp -j REDIRECT --to-ports 9040

COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]

-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT

-A INPUT -p tcp -j REJECT --reject-with tcp-reset
-A INPUT -p udp -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable

-A OUTPUT -d 127.0.0.0/8 -j ACCEPT
-A OUTPUT -d 192.168.0.0/24 -j ACCEPT

-A OUTPUT -m owner --uid-owner "tor" -j ACCEPT
COMMIT
